# spack-exercise

./: CMakeLists.txt
docker/: Dockerfile  package.py  package_optional-task2.py
